# stm32-rustls

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
dependency-solver/: Cargo.toml  rust-toolchain.toml
dependency-solver/.cargo/: config.toml
dependency-solver/tests/: integration.rs
non-embassy/: Cargo.toml
non-embassy/src/: lib.rs
src/: lib.rs
stm32f4/: Cargo.toml  rust-toolchain.toml
stm32f4/src/: lib.rs
stm32f429/: Cargo.toml
stm32f429/.cargo/: config.toml
stm32f429/src/: board.rs  democryptoprovider.rs  demotimeprovider.rs  kx.rs  lib.rs  verify.rs
stm32f429/src/democryptoprovider/: aead.rs  kx.rs
tcplistener/: Cargo.toml
tcplistener/src/: main.rs
tests/: integration.rs
time_booter/: Cargo.toml
time_booter/src/: main.rs
