[package]
# TODO(1) fix `authors` and `name` if you didn't use `cargo-generate`
authors = ["aissata <aimaiga2@gmail.com>"]
name = "dependency-solver"
edition = "2021"
version = "0.1.0"

[lib]
harness = false

# needed for each integration test
[[test]]
name = "integration"
harness = false

[dependencies]

cortex-m = { version = "0.7.6", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.0"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "fe8c46b", features = [
    "defmt",
    "stm32f429zi",
    "unstable-pac",
    "memory-x",
    "time-driver-any",
    #"exti",
    #"embedded-sdmmc",
    #"chrono",
] }

embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "fe8c46b", features = [
    "nightly",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",
] }

embassy-net = { git = "https://github.com/embassy-rs/embassy", rev = "fe8c46b", features = [
    "defmt",
    "tcp",
    "dhcpv4",
    "medium-ethernet",
] }

[dev-dependencies]
defmt-test = "0.3"


# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 'z'         # <-
overflow-checks = true  # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3           # <-
overflow-checks = true  # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-
