[package]
edition = "2021"
name = "stm32f429"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
# Change stm32f429zi to your chip name, if necessary.
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "eb368f77a46682f76dcc4d75f9ba4ce80dfb4193", features = [
    "nightly",
    "unstable-traits",
    "defmt",
    "stm32f429zi",
    "unstable-pac",
    "memory-x",
    "time-driver-any",
    "exti",
    "embedded-sdmmc",
    "chrono",
] }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "eb368f77a46682f76dcc4d75f9ba4ce80dfb4193", features = [
    "defmt",
] }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "eb368f77a46682f76dcc4d75f9ba4ce80dfb4193", features = [
    "nightly",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",
] }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "eb368f77a46682f76dcc4d75f9ba4ce80dfb4193", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "unstable-traits",
    "tick-hz-32_768",
] }
embassy-usb = { git = "https://github.com/embassy-rs/embassy", rev = "eb368f77a46682f76dcc4d75f9ba4ce80dfb4193", features = [
    "defmt",
] }
embassy-net = { git = "https://github.com/embassy-rs/embassy", rev = "eb368f77a46682f76dcc4d75f9ba4ce80dfb4193", features = [
    "defmt",
    "tcp",
    "dhcpv4",
    "medium-ethernet",
    "nightly",
    "udp",
    "dns",
] }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "eb368f77a46682f76dcc4d75f9ba4ce80dfb4193" }

defmt = "0.3"
defmt-rtt = "0.4"
cortex-m-semihosting = "0.5.0"
cortex-m = { version = "0.7.6", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
embedded-io = { version = "0.5.0" }
embedded-io-async = { version = "0.5.0" }
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = [
    "async-await",
] }
heapless = { version = "0.7.5", default-features = false }
nb = "1.0.0"
embedded-storage = "0.3.0"
micromath = "2.0.0"
static_cell = { version = "1.1", features = ["nightly"] }
chrono = { version = "^0.4", default-features = false }
embedded-alloc = "0.5.0"
spin = "0.9.8"
rustls-pki-types = "0.2.1"
rustls = { git = "https://github.com/japaric/rustls", branch = "VOLATILE-no-std-support", default-features = false, features = [
    "tls12",
] }
sha2 = { version = "0.10.8", default-features = false }
chacha20poly1305 = { version = "0.10.1", default-features = false, features = [
    "alloc",
] }
hmac = "0.12.1"
x25519-dalek = { version = "2.0.0", default-features = false }
rand_core = { version = "0.6.4", default-features = false }
[profile.release]
debug = 2
opt-level = "z"
#lto = true
